Simplify tests